added background-img and some javascript that doesn't work

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <body>
     <div class="buttons are-large">
-        <button class="button is-success is-hover is rounded is-pulled-left" id="button">Get Schwifty!
+        <button class="button is-success is-hover is rounded is-pulled-left" id="characterButton">Get Schwifty!
             Click Button To Get Character/Quote</button><br>
-        <button class="button is-danger" id="button">Gallery of Ricks</button><br>
-        <button class="button is-primary is-pulled-right" id="button">Mr. Meeseeks Button Plays Soundclips
+        <button class="button is-danger" id="galleryButton">Gallery of Ricks</button><br>
+        <button class="button is-primary is-pulled-right" id="soundClipButton">Mr. Meeseeks Button Plays Soundclips
         </button>
     </div>
 
-    <div class="modal" id="page-modal">
+    <div class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
                 <p class="modal-card-title">Modal title</p>
-                <button class="delete" aria-label="close"></button>
+                <button class=" button delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
                 <!-- Content ... -->
@@ -34,7 +34,7 @@
                 <button class="button">Cancel</button>
             </footer>
         </div>
-    </div>
+
 </body>
 <script src="./js/script.js"></script>
 
