--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+
+
     <title>Get Schwifty!</title>
 </head>
 
@@ -14,7 +16,9 @@
     <div class="buttons are-large">
         <button class="button is-success is-hover is rounded is-pulled-left" id="characterButton">Get Schwifty!
             Click Button To Get Character/Quote</button><br>
+
         <button class="button is-danger" id="galleryButton">Gallery of Ricks</button><br>
+
         <button class="button is-primary is-pulled-right" id="soundClipButton">Mr. Meeseeks Button Plays Soundclips
         </button>
     </div>
@@ -36,6 +40,8 @@
         </div>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 
 </html>
