--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js'>
+    </script>
 
 
     <title>Get Schwifty!</title>
@@ -14,12 +16,11 @@
 
 <body>
     <div class="buttons are-large">
-        <button class="button is-success is-hover is rounded is-pulled-left" id="characterButton">Get Schwifty!
-            Click Button To Get Character/Quote</button><br>
+        <button class="button is-success is-hover is rounded" id="characterButton">Get Schwifty!</button>
 
-        <button class="button is-danger" id="galleryButton">Gallery of Ricks</button><br>
+        <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
 
-        <button class="button is-primary is-pulled-right" id="soundClipButton">Mr. Meeseeks Button Plays Soundclips
+        <button class="button is-primary" id="soundClipButton">OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
         </button>
     </div>
 
@@ -27,15 +28,15 @@
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
-                <p class="modal-card-title">Modal title</p>
+                <p class="modal-card-title">Character</p>
                 <button class=" button delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
                 <!-- Content ... -->
             </section>
             <footer class="modal-card-foot">
-                <button class="button is-success">Save changes</button>
-                <button class="button">Cancel</button>
+                <button class="button is-success">Save If You Think This Guy Gets It</button>
+                <button class="button">Look Who's Purging Now</button>
             </footer>
         </div>
 
