added remove is-active when X is clicked

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </div>
 
     <div class="modal">
+        
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
                 <p class="modal-card-title">Character</p>
-                <button class=" button delete" aria-label="close"></button>
+                <button class=" button deleteBtn" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
                 <!-- Content ... -->
