working out fetch

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             </header>
             <section class="modal-card-body">
                 <!-- Content ... -->
+                <div class="col-12 col-md-8">
+                    <h2 class="characterName"></h2>
+                    <h2 class="characterEpisodes"></h2>
+                    <h2 class="charcterLocation"></h2>
+                </div>
             </section>
             <footer class="modal-card-foot">
                 <button class="button is-success">Save If You Think This Guy Gets It</button>
