added minor updates to character card and cleaned up comments

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <div class="col-12 col-md-8">
                     <h2 class="characterName"></h2>
                     <h2 class="characterSpecies"></h2>
+                    <h2 class="characterOrigin"></h2>
                     <img class="characterImage">
                 </div>
             </section>
