--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 <!-- Content ... -->
                 <div class="col-12 col-md-8">
                     <h2 class="characterName"></h2>
-                    <h2 class="characterEpisodes"></h2>
-                    <h2 class="charcterLocation"></h2>
+                    <h2 class="characterSpecies"></h2>
+                    <h2 class="characterOrigin"></h2>
+                    <img class="characterImage">
                 </div>
             </section>
             <footer class="modal-card-foot">
