added sound finally! I have it as another button but i'll implement the on click

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 
         <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
 
-        <button class="button is-primary" id="soundClipButton">OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
-        </button>
+        <button class="button is-primary" id="soundClipButton">
+            OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
+        <input type="button" class= "button is-hover is-medium" value="PLAY" onclick="play()">
+    
+        <audio id= "audio" src="./im-mr.mp3">
+            <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
     </div>
 
     <div class="modal">
