--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
         <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
 
-        <button class="button is-primary" id="soundClipButton">
+        <button class="button is-primary" id="soundClipButton" onclick="play()">
             OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
-        <input type="button" class= "button is-hover is-medium" value="PLAY" onclick="play()">
-    
-        <audio id= "audio" src="./im-mr.mp3">
-            <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            <!-- <input type="button" class= "button is-hover is-medium" value="PLAY" onclick="play"> -->
+
+            <audio id="audio" src="./im-mr.mp3">
+                <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
     </div>
 
     <div class="modal">
-        
+
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
