--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <div class="buttons are-large">
-        <button class="button is-success is-hover is rounded" id="characterButton">Get Schwifty!</button>
+        <div class="firstBtn">
+        <button class="button is-success is-hover is rounded social_item neonBtn" id="characterButton">Get Schwifty!</button>
 
         <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
 
@@ -27,6 +28,7 @@
             <audio id="audio" src="./im-mr.mp3">
                 <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
+    </div>
     </div>
 
     <div class="modal">
