added gallery modal (not working)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
                 <button class="button is-success">Save If You Think This Guy Gets It</button>
                 <button class="button">Look Who's Purging Now</button>
             </footer>
+
+            
+        </div>
+    <div class="modal modalTwo">
+
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Character</p>
+                <button class=" button deleteBtn" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+                <!-- Content ... -->
+                <div class="col-12 col-md-8">
+                    <h2 class="characterName"></h2>
+                    <h2 class="characterSpecies"></h2>
+                    <h2 class="characterOrigin"></h2>
+                    <img class="characterImage">
+                </div>
+            </section>
+            <footer class="modal-card-foot">
+                <button class="button is-success">Save If You Think This Guy Gets It</button>
+                <button class="button">Look Who's Purging Now</button>
+            </footer>
+
+
         </div>
 
 </body>
