trying to set local storage

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </section>
             <footer class="modal-card-foot">
-                <button class="button is-success">Save If You Think This Guy Gets It</button>
+                <button class="button is-success" id="saveRicks">Save If You Think This Guy Gets It</button>
                 <button class="button">Look Who's Purging Now</button>
             </footer>
 
