--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 <title>Get Schwifty!</title>
 </head>
 
-<body>
+<body></body>
     <div class="buttons are-large">
-        <div class="firstBtn">
-        <button class="button is-success is-hover is rounded social_item neonBtn" id="characterButton">Get Schwifty!</button>
+        <button class=" firstBtn button is-success is-hover is rounded social_item neonBtn" id="characterButton">Get Schwifty!</button>
 
         <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
 
@@ -30,7 +29,6 @@
             <audio id="audio" src="./im-mr.mp3">
                 <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
-    </div>
     </div>
 
     <div class="modal">
