tried to work out styling on buttons to fix align-items

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="buttons are-large">
         <button class=" firstBtn button is-success is-hover is rounded social_item neonBtn" id="characterButton">Get Schwifty!</button>
 
-        <button class="button is-danger" id="galleryButton">Gallery of Ricks</button>
+        <button class="button is-danger is-full-width" id="galleryButton">Gallery of Ricks</button>
 
         <button class="button is-primary" id="soundClipButton" onclick="play()">
             OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
