added set item to local storage

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
     </div>
-
+    
     <div class="modal">
-
+        <div class="container">
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
@@ -52,7 +52,7 @@
                 <button class="button is-success" id="saveRicks">Save If You Think This Guy Gets It</button>
                 <button class="button">Look Who's Purging Now</button>
             </footer>
-
+        </div>
             
         </div>
     <div class="modal modalTwo">
