added space between cards

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             </div>
 
             <div class="container">
-                <span><h2 class="savedCharacterName">
+                <div class="column"><h2 class="savedCharacterName">
                 </h2>
-                </span>
-                <span><h2 class="savedCharacterSpecies">
+                </div><br>
+                <div class="column"><h2 class="savedCharacterSpecies">
                 </h2>
-                </span>
-                <span><h2 class="savedOriginEl"></h2>
-                </span>
-                <span><img class="savedCharacterImage">
-                </span>
+                </div>
+                <div class="column"><h2 class="savedCharacterOrigin"></h2>
+                </div>
+                <div class="column"><h2><img class="savedCharacterImage"></h2>
+                </div>
             </div>
 
 </body>
