added psuedo code to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Meta Data -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,25 +16,29 @@
     <title>Get Schwifty!</title>
 </head>
 
+<!-- Buttons using Bulma classes and classes to add extra styling -->
 <body>
     <div class="buttons columns">
-        <button class=" column firstBtn button is-success is-size-3 is-hover is-rounded social_item neonBtn"
+        <button class="column firstBtn button is-success is-size-3 is-hover is-rounded social_item neonBtn"
             id="characterButton">Get Schwifty!</button>
 
-        <button class=" column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of Ricks</button>
+        <button class="column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of
+            Ricks</button>
 
-        <button class="column secondBtn button is-primary is size-3 is-hover is-rounded social_item neonBtn">
+        <button class="column thirdButton button is-primary is-large is-hover is-rounded social_item neonBtn">
             Some Quotes If Ya Want To Click Here
-        </button>    
+        </button>
 
-        <button class="column thirdButton button is-primary is-size-3" id="soundClipButton" onclick="play()">
+        <button class="column fourhButton button is-primary is-size-3" id="soundClipButton" onclick="play()">
             OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
 
+            <!-- Add Audio to the Look At Me Button through JS as well -->
             <audio id="audio" src="./im-mr.mp3">
                 <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
     </div>
 
+    <!-- created modal for Character info -->
     <div class="container">
         <div class="modal">
             <div class="modal-background"></div>
@@ -57,22 +61,9 @@
                     <button class="button" id="deleteRicks">Look Who's Purging Now</button>
                 </footer>
             </div>
-
+            <!-- section that displays quotes -->
             <div class="quotesSection">
                 <textarea class="textQuote"></textarea>
-            </div>
-
-            <div class="container">
-                <div class="column"><h2 class="savedCharacterName">
-                </h2>
-                </div><br>
-                <div class="column"><h2 class="savedCharacterSpecies">
-                </h2>
-                </div>
-                <div class="column"><h2 class="savedCharacterOrigin"></h2>
-                </div>
-                <div class="column"><h2><img class="savedCharacterImage"></h2>
-                </div>
             </div>
 
 </body>
