added butoon text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Ricks</button>
 
         <button class="column thirdButton button is-primary is-large is-hover is-rounded social_item neonBtn">
-            Some Quotes If Ya Want To Click Here
+           DANGER DO NOT PUSH THIS BUTTON
         </button>
 
         <button class="column fourhButton button is-primary is-size-3" id="soundClipButton" onclick="play()">
