--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <button class=" column firstBtn button is-success is-size-3 is-hover is-rounded social_item neonBtn"
             id="characterButton">Get Schwifty!</button>
 
-        <button class=" column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of Ricks</button>
+        <button class="column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of Ricks</button>
 
-        <button class="column secondBtn button is-primary is size-3 is-hover is-rounded social_item neonBtn">
+        <button class="column secondBtn button is-primary is large is-hover is-rounded social_item neonBtn">
             Some Quotes If Ya Want To Click Here
         </button>    
 
