added quote button functionality with api

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <button class=" column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of Ricks</button>
 
-        <button class="column secondBtn button is-primary is size-3 is-hover is-rounded social_item neonBtn">
+        <button class="column secondBtn button is-primary is size-3 is-hover is-rounded social_item neonBtn" id="quotesButton">
             Some Quotes If Ya Want To Click Here
         </button>    
 
