added rounding to buttons

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <button class="column firstBtn button is-success is-size-3 is-hover is-rounded social_item neonBtn"
             id="characterButton">Get Schwifty!</button>
 
-        <button class="column secondButton button is-danger is-size-3 is-full-width" id="galleryButton">Gallery of
+        <button class="column secondButton button is-rounded is-danger is-size-3 is-full-width" id="galleryButton">Gallery of
             Ricks</button>
 
         <button class="column thirdButton button is-link is-size-3 is-full-width is-hover is-rounded social_item neonBtn">
             DANGER DO NOT PUSH THIS IF YOU"RE OFFENDED EASILY
         </button>
 
-        <button class="column fourthButton button is-primary is-size-3" id="soundClipButton" onclick="play()">
+        <button class="column fourthButton button is-rounded is-primary is-size-3" id="soundClipButton" onclick="play()">
             OOOOOO WEEEEEE LOOOOOK ATTT MEEEEE!
 
             <!-- Add Audio to the Look At Me Button through JS as well -->
