--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- section that displays quotes -->
     <section class="quoteSection">
         <div class="quoteContainer">
-            <p class="textQuote"></p>
+            <p class="textQuote">Quote should be displayed here</p>
         </div>
     </section>
 
