--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js'>
     </script>
-
-
+    
     <title>Get Schwifty!</title>
 </head>
 
@@ -27,7 +26,7 @@
         <button class="column secondButton button is-rounded is-danger is-size-3 is-full-width" id="galleryButton">Gallery of
             Ricks</button>
 
-        <button class="column thirdButton button is-link is-size-3 is-full-width is-hover is-rounded social_item neonBtn" id="quoteButton">
+        <button class="column thirdButton button is-link is-size-3 is-full-width is-hover is-rounded social_item neonBtn" id="quotesButton">
             DANGER DO NOT PUSH THIS IF YOU'RE OFFENDED EASILY
         </button>
 
@@ -43,7 +42,7 @@
     <!-- section that displays quotes -->
     <section class="quoteSection">
         <div class="quoteContainer">
-            <p class="textQuote">Quote should be displayed here</p>
+            <p class="textQuote"></p>
         </div>
     </section>
 
