--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </audio>
         </div>
 
-        <!-- section that displays quotes -->
+        <!-- section that displays quotes using DOM manip.-->
         <section class="quoteSection">
             <div class="quoteContainer">
                 <p class="textQuote"></p>
